[tool.poetry]
name = "horizon-hub-core"
packages = [{include = "horizon_hub"}]
version = "0.1.0"
description = ""
authors = ["pzhao <pzhao@roblox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
